# dice

./: README.md  com.github.alexkdeveloper.dice.json  meson.build  snapcraft.yaml
data/: com.github.alexkdeveloper.dice.appdata.xml.in  com.github.alexkdeveloper.dice.desktop.in  com.github.alexkdeveloper.dice.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  it.po  meson.build  nl.po  ru.po
src/: dice.gresource.xml  main.vala  meson.build  window.ui  window.vala
